tests/snapshots/test_noseyparker_help__help_summarize_short-2.snap
---
source: tests/test_noseyparker_help.rs
expression: stdout
---
Summarize scan findings

Usage: noseyparker summarize [OPTIONS] --datastore <PATH>

Options:
  -d, --datastore <PATH>  Use the specified datastore path [env: NP_DATASTORE=]
  -h, --help              Print help (see more with '--help')

Output Options:
  -o, --output <PATH>    Write output to the specified path
  -f, --format <FORMAT>  Write output in the specified format [default: human] [possible values:
                         human, json, jsonl, sarif]

Global Options:
  -v, --verbose...       Enable verbose output
      --color <MODE>     Enable or disable colored output [default: auto] [possible values: auto,
                         never, always]
      --progress <MODE>  Enable or disable progress bars [default: auto] [possible values: auto,
                         never, always]

