tests/snapshots/test_noseyparker_help__no_args-3.snap
---
source: tests/test_noseyparker_help.rs
expression: stderr
---
Find secrets and sensitive information in textual data

Usage: noseyparker [OPTIONS] <COMMAND>

Commands:
  scan       Scan content for secrets
  summarize  Summarize scan findings
  report     Report detailed scan findings
  github     Interact with GitHub
  datastore  Manage datastores
  rules      Manage rules
  help       Print this message or the help of the given subcommand(s)

Options:
  -h, --help     Print help (see more with '--help')
  -V, --version  Print version

Global Options:
  -v, --verbose...       Enable verbose output
      --color <MODE>     Enable or disable colored output [default: auto] [possible values: auto,
                         never, always]
      --progress <MODE>  Enable or disable progress bars [default: auto] [possible values: auto,
                         never, always]

